--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
     <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/projects_style.css">
 </head>
 <body style="overflow-x : hidden;">
     <div class="row" style="height:100%;">
@@ -20,20 +21,26 @@
                             Mitchell Karns
                         </h1>
                     </li>
-                    <li class="nav-link">
-                        <span class="fa fa-home fa-2x">
-                            <span class="nav-text">Home</span>
-                        </span>
+                    <li class="nav-link" id="nav-home">
+                        <a class="nav-link" href="http://127.0.0.1:5000/">
+                            <span class="fa fa-home fa-2x">
+                                <span id="home" class="nav-text">Home</span>
+                            </span>
+                        </a>
                     </li>
-                    <li class="nav-link">
-                        <span class="fa fa-user fa-2x">
-                            <span class="nav-text">About</span>
-                        </span>
+                    <li class="nav-link" id="nav-about">
+                        <a class="nav-link" href="http://127.0.0.1:5000/about">
+                            <span class="fa fa-user fa-2x">
+                                <span id="about" class="nav-text">About</span>
+                            </span>
+                        </a>
                     </li>
-                    <li class="nav-link">
-                        <span class="fa fa-desktop fa-2x">
-                            <span class="nav-text">Projects</span>
-                        </span>
+                    <li class="nav-link" id="nav-projects">
+                        <a class="nav-link" href="http://127.0.0.1:5000/projects">
+                            <span class="fa fa-desktop fa-2x">
+                                <span id="projects" class="nav-text">Projects</span>
+                            </span>
+                        </a>
                     </li>
                 </ul>
             </div>
