--- a/templates/main.html
+++ b/templates/main.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
 {% block main %}
 <img src="/static/cat.jpg" class="img-responsive">
-<p>Main Page</p>
+<div class="row">
+    <div class="col-md-12">
+        <h2 id="name-title">Mitchell Karns - Software Engineer</h2>
+    </div>
+</div>
 {% endblock %}
