--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
 {% block main %}
+<a class="finished"><i class="fa fa-github finished-proj"></i></a>
+<a class="finished"><i class="fa fa-github finished-proj"></i></a>
 <p>Projects Page</p>
 {% endblock %}
