--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,13 @@
 {% extends "base.html" %}
 {% block main %}
-<a class="icon"><p>Swag</p></a>
+<div class="row">
+    <div class="col-md-6">
+        <a class="icon"><p>Swag</p></a>
+    </div>
+    <div class="col-md-6">
+        <a class="icon"><p>Swag</p></a>
+    </div>
+</div>
+
 <p>About Page</p>
 {% endblock %}
