--- a/templates/projects.html
+++ b/templates/projects.html
@@ -1,6 +1,36 @@
 {% extends "base.html" %}
 {% block main %}
-<a class="finished"><i class="fa fa-github finished-proj"></i></a>
-<a class="finished"><i class="fa fa-github finished-proj"></i></a>
+<div class="row">
+    <div class="col-md-6">
+        <div class="project">
+            <a class="finished">
+                <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs>
+                        <symbol id="icon-github" viewBox="0 0 878 1024">
+                            <title>github</title>
+                            <path class="path1" stroke="#000000" stroke-width="10" d="M877.714 512q0 143.429-83.714 258t-216.286 158.571q-15.429 2.857-22.571-4t-7.143-17.143v-120.571q0-55.429-29.714-81.143 32.571-3.429 58.571-10.286t53.714-22.286 46.286-38 30.286-60 11.714-86q0-69.143-45.143-117.714 21.143-52-4.571-116.571-16-5.143-46.286 6.286t-52.571 25.143l-21.714 13.714q-53.143-14.857-109.714-14.857t-109.714 14.857q-9.143-6.286-24.286-15.429t-47.714-22-49.143-7.714q-25.143 64.571-4 116.571-45.143 48.571-45.143 117.714 0 48.571 11.714 85.714t30 60 46 38.286 53.714 22.286 58.571 10.286q-22.857 20.571-28 58.857-12 5.714-25.714 8.571t-32.571 2.857-37.429-12.286-31.714-35.714q-10.857-18.286-27.714-29.714t-28.286-13.714l-11.429-1.714q-12 0-16.571 2.571t-2.857 6.571 5.143 8 7.429 6.857l4 2.857q12.571 5.714 24.857 21.714t18 29.143l5.714 13.143q7.429 21.714 25.143 35.143t38.286 17.143 39.714 4 31.714-2l13.143-2.286q0 21.714 0.286 50.857t0.286 30.857q0 10.286-7.429 17.143t-22.857 4q-132.571-44-216.286-158.571t-83.714-258q0-119.429 58.857-220.286t159.714-159.714 220.286-58.857 220.286 58.857 159.714 159.714 58.857 220.286z"></path>
+                        </symbol>
+                    </defs>
+                </svg>
+                <svg class="icon icon-github"><use xlink:href="#icon-github"></use></svg>
+            </a>
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="project">
+            <a class="wip-proj">
+                <svg style="position: absolute; width: 0; height: 0;" width="0" height="0" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+                    <defs>
+                        <symbol id="icon-wrench" viewBox="0 0 962 1024">
+                            <title>wrench</title>
+                            <path class="path1" stroke="#000000" stroke-width="10" d="M219.429 841.143q0-14.857-10.857-25.714t-25.714-10.857-25.714 10.857-10.857 25.714 10.857 25.714 25.714 10.857 25.714-10.857 10.857-25.714zM587.429 601.143l-389.714 389.714q-21.143 21.143-51.429 21.143-29.714 0-52-21.143l-60.571-61.714q-21.714-20.571-21.714-51.429 0-30.286 21.714-52l389.143-389.143q22.286 56 65.429 99.143t99.143 65.429zM949.714 352.571q0 22.286-13.143 60.571-26.857 76.571-94 124.286t-147.714 47.714q-105.714 0-180.857-75.143t-75.143-180.857 75.143-180.857 180.857-75.143q33.143 0 69.429 9.429t61.429 26.571q9.143 6.286 9.143 16t-9.143 16l-167.429 96.571v128l110.286 61.143q2.857-1.714 45.143-27.714t77.429-46.286 40.286-20.286q8.571 0 13.429 5.714t4.857 14.286z"></path>
+                        </symbol>
+                    </defs>
+                </svg>
+                <svg class="icon icon-wrench"><use xlink:href="#icon-wrench"></use></svg>
+            </a>
+        </div>
+    </div>
+</div>
 <p>Projects Page</p>
 {% endblock %}
