--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,7 +6,7 @@
         <div class="row">
             <div class="col-md-6">
                 <div class="row">
-                    <div class="col-md-12 col-md-offset-3" style="overflow: hidden;">
+                    <div class="col-md-12" style="overflow: hidden;">
                         <div class="project">
                             {% if projs[0].t == "fin" %}
                             <a class="finished" href={{projs[0].url}}>
@@ -40,7 +40,7 @@
             </div>
             <div class="col-md-6">
                 <div class="row">
-                    <div class="col-md-12 col-md-offset-3" style="overflow:hidden;">
+                    <div class="col-md-12" style="overflow:hidden;">
                         <div class="project">
                             {% if projs[1].t == "fin" %}
                             <a class="finished" href={{projs[1].url}}>
@@ -75,7 +75,7 @@
         </div>
     {% else %}
      <div class="row">
-        <div class="col-md-12 col-md-offset-5">
+        <div class="col-md-12">
                     <div class="project">
                         {% if projs[0].t == "fin" %}
                         <a class="finished" href={{projs[0].url}}>
