--- a/templates/about.html
+++ b/templates/about.html
@@ -1,13 +1,170 @@
 {% extends "base.html" %}
 {% block main %}
 <div class="row">
-    <div class="col-md-6">
-        <a class="icon"><p>Swag</p></a>
-    </div>
-    <div class="col-md-6">
-        <a class="icon"><p>Swag</p></a>
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-4 lang-wrapper">
+                <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="python-text">
+                            <text x="0" y="20" class="text-line">
+                                Python
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#python-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                    <!-- Icon made by Freepik [http://www.freepik.com/] from www.flaticon.com -->
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 17.056 17.056" style="enable-background:new 0 0 17.056 17.056;" xml:space="preserve" width="64px" height="64px">
+                        <g>
+                            <g>
+                                <path class="python-lang-icon" d="M11.298,8.02c1.295-0.587,1.488-5.055,0.724-6.371c-0.998-1.718-5.742-1.373-7.24-0.145    C4.61,2.114,4.628,3.221,4.636,4.101h4.702v0.412H4.637c0,0.006-2.093,0.013-2.093,0.013c-3.609,0-3.534,7.838,1.228,7.838    c0,0,0.175-1.736,0.481-2.606C5.198,7.073,9.168,8.986,11.298,8.02z M6.375,3.465c-0.542,0-0.981-0.439-0.981-0.982    c0-0.542,0.439-0.982,0.981-0.982c0.543,0,0.982,0.44,0.982,0.982C7.358,3.025,6.918,3.465,6.375,3.465z" fill="#000000"/>
+                                <path class="python-lang-icon" d="M13.12,4.691c0,0-0.125,1.737-0.431,2.606c-0.945,2.684-4.914,0.772-7.045,1.738    C4.35,9.622,4.155,14.09,4.92,15.406c0.997,1.719,5.741,1.374,7.24,0.145c0.172-0.609,0.154-1.716,0.146-2.596H7.603v-0.412h4.701    c0-0.006,2.317-0.013,2.317-0.013C17.947,12.53,18.245,4.691,13.12,4.691z M10.398,13.42c0.542,0,0.982,0.439,0.982,0.982    c0,0.542-0.44,0.981-0.982,0.981s-0.981-0.439-0.981-0.981C9.417,13.859,9.856,13.42,10.398,13.42z" fill="#000000"/>
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+            </div>
+            <div class="col-md-4 lang-wrapper">
+                 <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="java-text">
+                            <text x="0" y="20" class="text-line">
+                                Java
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#java-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                     <svg class="lang-icon-wrapper" xmlns="http://www.w4.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 502.632 502.632" style="enable-background:new 0 0 502.632 502.632;" xml:space="preserve" width="64px" height="64px">
+                        <g>
+                            <g>
+                                <path class="java-lang-icon" d="M240.864,269.894c0,0-28.02-53.992-26.985-93.445c0.755-28.193,64.324-56.062,89.281-96.529    C328.074,39.431,300.054,0,300.054,0s6.234,29.077-10.376,59.147c-16.609,30.113-77.914,47.779-101.749,99.679    S240.864,269.894,240.864,269.894z" fill="#000000"/>
+                                <path class="java-lang-icon" d="M345.741,105.869c0,0-95.494,36.347-95.494,77.849c0,41.545,25.928,55.027,30.113,68.509    c4.142,13.525-7.269,36.347-7.269,36.347s37.361-25.95,31.105-56.062c-6.234-30.113-35.29-39.475-18.659-69.544    C296.646,142.799,345.741,105.869,345.741,105.869z" fill="#000000"/>
+                                <path class="java-lang-icon" d="M230.51,324.748c88.246-3.149,120.43-30.997,120.43-30.997    c-57.076,15.553-208.654,14.539-209.711,3.128c-1.014-11.411,46.701-20.773,46.701-20.773s-74.721,0-80.955,18.68    C100.74,313.467,142.328,327.833,230.51,324.748z" fill="#000000"/>
+                                <path class="java-lang-icon" d="M358.187,368.494c0,0,86.369-18.421,77.827-65.338c-10.354-57.119-70.58-24.936-70.58-24.936    s42.602,0,46.722,25.928C416.32,330.098,358.187,368.494,358.187,368.494z" fill="#000000"/>
+                                <path class="java-lang-icon" d="M315.628,343.601c0,0-21.765,5.716-54.013,9.34c-43.228,4.853-95.494,1.014-99.657-6.256    c-4.098-7.269,7.269-11.411,7.269-11.411c-51.921,12.468-23.512,34.233,37.339,38.418c52.158,3.559,129.791-15.574,129.791-15.574    L315.628,343.601z" fill="#000000"/>
+                                <path class="java-lang-icon" d="M181.738,388.943c0,0-23.555,0.669-24.936,13.137c-1.359,12.382,14.496,23.512,72.65,26.964    c58.133,3.451,98.988-15.898,98.988-15.898l-26.295-15.962c0,0-16.631,3.494-42.236,6.946    c-25.626,3.473-78.173-2.783-80.243-7.593C177.553,391.682,181.738,388.943,181.738,388.943z" fill="#000000"/>
+                                <path class="java-lang-icon" d="M407.994,445.005c8.995-9.707-2.783-17.321-2.783-17.321s4.142,4.853-1.337,10.376    c-5.544,5.522-56.084,19.349-137.061,23.512c-80.955,4.163-168.856-7.615-171.639-17.99    c-2.696-10.376,45.018-18.659,45.018-18.659c-5.522,0.69-71.96,2.071-74.074,20.082c-2.071,17.968,29.056,32.507,153.67,32.507    C344.339,477.491,399.042,454.647,407.994,445.005z" fill="#000000"/>
+                                <path class="java-lang-icon" d="M359.568,485.817c-54.682,11.044-220.734,4.077-220.734,4.077s107.919,25.626,231.109,4.185    c58.888-10.268,62.318-38.763,62.318-38.763S414.25,474.708,359.568,485.817z" fill="#000000"/>
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+            </div>
+            <div class="col-md-4 lang-wrapper">
+                <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="c-text">
+                            <text x="0" y="20" class="text-line">
+                                C
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#c-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 554.625 554.625" style="enable-background:new 0 0 554.625 554.625;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path class="c-lang-icon" d="M325.125,286.875h19.125c11.475,0,19.125,7.65,19.125,19.125H382.5c0-21.037-17.213-38.25-38.25-38.25h-19.125    c-21.037,0-38.25,17.213-38.25,38.25v57.375c0,21.037,17.213,38.25,38.25,38.25h19.125c21.037,0,38.25-17.213,38.25-38.25h-19.125    c0,11.475-7.65,19.125-19.125,19.125h-19.125c-11.475,0-19.125-7.65-19.125-19.125V306    C306,294.525,313.65,286.875,325.125,286.875z" fill="#000000"/>
+                                <path class="c-lang-icon" d="M497.25,210.375H363.375V153L248.625,19.125H38.25C17.212,19.125,0,36.337,0,57.375V497.25    c0,21.037,17.212,38.25,38.25,38.25h286.875c21.037,0,38.25-17.213,38.25-38.25V459H497.25c32.513,0,57.375-24.862,57.375-57.375    V267.75C554.625,235.237,529.763,210.375,497.25,210.375z M248.625,47.812L338.513,153H267.75    c-9.562,0-19.125-9.562-19.125-19.125V47.812z M344.25,497.25c0,9.562-7.65,19.125-19.125,19.125H38.25    c-9.562,0-19.125-7.65-19.125-19.125V57.375c0-9.562,7.65-19.125,19.125-19.125H229.5v95.625c0,21.038,17.212,38.25,38.25,38.25    h76.5v38.25H172.125c-32.513,0-57.375,24.862-57.375,57.375v133.875c0,32.513,24.862,57.375,57.375,57.375H344.25V497.25z     M535.5,401.625c0,21.037-17.213,38.25-38.25,38.25H172.125c-21.038,0-38.25-17.213-38.25-38.25V267.75    c0-21.038,17.212-38.25,38.25-38.25H497.25c21.037,0,38.25,17.212,38.25,38.25V401.625z" fill="#000000"/>
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+            </div>
+        </div>
     </div>
 </div>
-
+<div class="row">
+    <div class="col-md-12">
+        <div class="row">
+            <div class="col-md-4 lang-wrapper">
+                <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="javascript-text">
+                            <text x="0" y="20" class="text-line">
+                                Javascript
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#javascript-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 446.296 446.297" style="enable-background:new 0 0 446.296 446.297;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path class="javascript-lang-icon" d="M381.902,113.195c-0.944-28.551-1.467-67.126-1.188-95.697c0.01-1.274-0.193-2.396-0.482-3.453    c0.553-6.226-3.098-12.796-11.07-12.588C268.521,4.098,167.903,0.157,67.266,0c-8.371-0.016-12.038,7.343-11.006,13.802    c-0.333,1.122-0.566,2.328-0.551,3.702c1.519,120.089,5.647,292.639,5.776,412.749c0,2.696,0.764,4.88,1.985,6.616    c0.739,5.088,4.4,9.587,11.019,9.425c43.498-1.082,87.014-1.777,130.479-3.91c38.743-1.899,87.018,0.645,124.047-11.994    c13.106-4.479,24.836-11.101,34.891-20.683c18.377-17.519,24.648-41.035,26.238-65.815c1.518-23.806-1.285-48.774-1.844-70.706    C386.869,216.532,383.76,169.838,381.902,113.195z M318.224,327.397c-7.084,0.04-13.929,5.57-10.766,14.065    c6.368,17.088,9.278,38.304-0.508,54.649c-11.836,19.764-32.955,19.226-53.039,21.759c-12.278,1.549-25.334,0.727-37.717,1.077    c-9.635,0.269-131.628,3.244-131.628,3.722c-0.287-115.605-4.108-283.668-5.652-399.266c92.917,0.401,185.808,3.593,278.725,1.607    c-0.355,94.913,8.06,232.117,8.557,307.128c-14.411-4.55-29.31-6.469-44.691-5.438    C320.291,326.777,319.219,327.052,318.224,327.397z M327.298,406.416c9.334-15.899,11.659-35.409,6.81-56.559    c11.237,0.437,22.318,2.604,32.804,7.053c0.051,0.127,0.082,0.264,0.127,0.396C363.631,382.366,347.783,397.742,327.298,406.416z" fill="#000000"/>
+                                <path class="javascript-lang-icon" d="M214.125,138.648c-23.97,0.858-47.936,1.668-71.929,1.732c-15.089,0.041-15.089,23.44,0,23.399    c10.135-0.025,20.258-0.238,30.389-0.482c4.293,17.194,7.16,34.713,6.794,52.481c-0.134,6.495-0.7,15.219-5.096,20.459    c-5.037,5.997-16.841-0.716-21.848-3.26c-13.421-6.825-25.263,13.36-11.809,20.2c24.298,12.359,50.396,11.745,59.476-17.718    c6.941-22.525,1.965-49.83-3.585-72.846c5.873-0.19,11.743-0.358,17.613-0.571C229.171,161.512,229.222,138.108,214.125,138.648z" fill="#000000"/>
+                                <path class="javascript-lang-icon" d="M265.052,167.228c-2.259-4.687-1.219-8.186-2.803-7.084c6.82-4.763,20.724-1.589,28.143-0.695    c14.959,1.8,14.792-21.622,0-23.399c-15.63-1.876-39.472-4.014-48.338,12.708c-7.124,13.431,1.696,29.364,8.587,40.908    c8.491,14.226,19.108,27.226,26.304,42.216c0.59,1.224,1.412,4.265,1.696,5.361c-7.276,3.819-22.855-0.619-30.203-1.979    c-14.747-2.732-21.049,19.824-6.221,22.562c15.868,2.939,42.081,9.079,54.649-5.307c10.755-12.314,2.66-29.033-4.276-41.002    C283.867,196.477,272.634,182.941,265.052,167.228z" fill="#000000"/>
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+            </div>
+            <div class="col-md-4 lang-wrapper">
+                 <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="html-text">
+                            <text x="0" y="20" class="text-line">
+                                HTML5
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#html-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                     <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve">
+                        <g>
+                            <path class="html-lang-icon" d="M30.269,0l41.072,460.815L255.719,512l184.861-51.262L481.731,0H30.269z M405.381,431.412L256.768,472.6v0.233   l-0.388-0.117l-0.391,0.117V472.6l-148.611-41.188L72.257,37.669h368.249L405.381,431.412z M325.377,265.102l-6.535,73.276   l-62.968,16.996l-0.137,0.039l-62.931-16.958l-4.025-45.117h-56.745l7.915,88.756l115.786,32.127h0.06h0.077l0.115-0.039   l115.671-32.088l15.521-173.506H181.197l-5.151-57.874h216.071h0.195l5.057-56.513H114.26l15.249,170.9H325.377L325.377,265.102z" fill="#000000"/>
+                        </g>
+                     </svg>
+                </span>
+            </div>
+            <div class="col-md-4 lang-wrapper">
+                <span class="lang">
+                    <svg width="100" height="50">
+                        <symbol id="c-text">
+                            <text x="0" y="20" class="text-line">
+                                C
+                            </text>
+                        </symbol>
+                        <g>
+                            <use xlink:href="#c-text" class="lang-text"></use>
+                        </g>
+                    </svg>
+                    <svg class="lang-icon-wrapper" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="64px" height="64px" viewBox="0 0 554.625 554.625" style="enable-background:new 0 0 554.625 554.625;" xml:space="preserve">
+                        <g>
+                            <g>
+                                <path class="c-lang-icon" d="M325.125,286.875h19.125c11.475,0,19.125,7.65,19.125,19.125H382.5c0-21.037-17.213-38.25-38.25-38.25h-19.125    c-21.037,0-38.25,17.213-38.25,38.25v57.375c0,21.037,17.213,38.25,38.25,38.25h19.125c21.037,0,38.25-17.213,38.25-38.25h-19.125    c0,11.475-7.65,19.125-19.125,19.125h-19.125c-11.475,0-19.125-7.65-19.125-19.125V306    C306,294.525,313.65,286.875,325.125,286.875z" fill="#000000"/>
+                                <path class="c-lang-icon" d="M497.25,210.375H363.375V153L248.625,19.125H38.25C17.212,19.125,0,36.337,0,57.375V497.25    c0,21.037,17.212,38.25,38.25,38.25h286.875c21.037,0,38.25-17.213,38.25-38.25V459H497.25c32.513,0,57.375-24.862,57.375-57.375    V267.75C554.625,235.237,529.763,210.375,497.25,210.375z M248.625,47.812L338.513,153H267.75    c-9.562,0-19.125-9.562-19.125-19.125V47.812z M344.25,497.25c0,9.562-7.65,19.125-19.125,19.125H38.25    c-9.562,0-19.125-7.65-19.125-19.125V57.375c0-9.562,7.65-19.125,19.125-19.125H229.5v95.625c0,21.038,17.212,38.25,38.25,38.25    h76.5v38.25H172.125c-32.513,0-57.375,24.862-57.375,57.375v133.875c0,32.513,24.862,57.375,57.375,57.375H344.25V497.25z     M535.5,401.625c0,21.037-17.213,38.25-38.25,38.25H172.125c-21.038,0-38.25-17.213-38.25-38.25V267.75    c0-21.038,17.212-38.25,38.25-38.25H497.25c21.037,0,38.25,17.212,38.25,38.25V401.625z" fill="#000000"/>
+                            </g>
+                        </g>
+                    </svg>
+                </span>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="blurb">
+            <p>This is a tech blurb about tech stuff and its long</p>
+        </div>
+    </div>
+</div>
+<div class="row">
+    <div class="col-md-12">
+        <div class="blurb">
+            <p>This is a non tech blurb and its long and stuff and @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@ @@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@</p>
+        </div>
+    </div>
+</div>
 <p>About Page</p>
+<div>Icons made by <a href="http://www.freepik.com" title="Freepik">Freepik</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<div>Icons made by <a href="http://www.flaticon.com/authors/yannick" title="Yannick">Yannick</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
+<div>Icons made by <a href="http://www.flaticon.com/authors/icomoon" title="Icomoon">Icomoon</a> from <a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></div>
 {% endblock %}
