--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link href='https://fonts.googleapis.com/css?family=Roboto:300,400,700' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="/static/projects_style.css">
+    <link rel="stylesheet" href="/static/about_style.css">
 </head>
 <body style="overflow-x : hidden;">
     <div class="row" style="height:100%;">
@@ -23,22 +24,22 @@
                     </li>
                     <li class="nav-link" id="nav-home">
                         <a class="nav-link" href="http://127.0.0.1:5000/">
-                            <span class="fa fa-home fa-2x">
-                                <span id="home" class="nav-text">Home</span>
+                            <span class="fa fa-home fa-2x side-link">
+                                <span id="home" class="nav-text side-link">Home</span>
                             </span>
                         </a>
                     </li>
                     <li class="nav-link" id="nav-about">
                         <a class="nav-link" href="http://127.0.0.1:5000/about">
-                            <span class="fa fa-user fa-2x">
-                                <span id="about" class="nav-text">About</span>
+                            <span class="fa fa-user fa-2x side-link">
+                                <span id="about" class="nav-text side-link">About</span>
                             </span>
                         </a>
                     </li>
                     <li class="nav-link" id="nav-projects">
                         <a class="nav-link" href="http://127.0.0.1:5000/projects">
-                            <span class="fa fa-desktop fa-2x">
-                                <span id="projects" class="nav-text">Projects</span>
+                            <span class="fa fa-desktop fa-2x side-link">
+                                <span id="projects" class="nav-text side-link">Projects</span>
                             </span>
                         </a>
                     </li>
